Add favicon image

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -19,6 +19,7 @@
         <meta name="description" content="Arnelle Balane's Personal Website">
         <meta name="twitter:card" content="summary_large_image">
 
+        <link rel="icon" href="/static/images/favicon.png">
         <title>{{ title or 'Arnelle Balane'}}</title>
     </head>
 
