Wrap dark-mode-toggle inside another element stabilize it

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -29,7 +29,10 @@
             <a class="Navigation__Link fs-18" href="/blog">Blog</a>
             <a class="Navigation__Link fs-18" href="/events">Events</a>
             <a class="Navigation__Link fs-18" href="/projects">Projects</a>
-            <dark-mode-toggle permanent></dark-mode-toggle>
+
+            <span class="DarkModeToggle">
+                <dark-mode-toggle permanent></dark-mode-toggle>
+            </span>
         </nav>
 
         <div class="Wrapper">
