--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -123,14 +123,19 @@ p {
     display: inline-block;
 }
 
+.DarkModeToggle {
+    display: block;
+    width: 6.2rem;
+    height: 4.8rem;
+    margin-top: -8px;
+    margin-right: -1.6rem;
+    margin-bottom: -1.2rem;
+}
+
 dark-mode-toggle {
     --dark-mode-toggle-light-icon: url("/static/images/icons/theme-light.svg");
     --dark-mode-toggle-dark-icon: url("/static/images/icons/theme-dark.svg");
     --dark-mode-toggle-icon-size: 2rem;
-
-    margin-top: -8px;
-    margin-right: -1.6rem;
-    margin-bottom: -1.2rem;
 }
 
 @media (min-width: 500px) {
@@ -142,7 +147,7 @@ dark-mode-toggle {
         margin-left: 3rem;
     }
 
-    dark-mode-toggle {
+    .DarkModeToggle {
         margin-left: 1.6rem;
     }
 }
