Give fixed dimensions to images to prevent layout jumps

--- a/source/index.njk
+++ b/source/index.njk
@@ -10,7 +10,7 @@ stylesheets:
 
     <div class="clearfix">
         <div class="Hero__Image">
-            <img src="/static/images/avatar.jpg" alt="Arnelle Balane" width="200px" height="200px">
+            <img src="/static/images/avatar-200.jpg" alt="Arnelle Balane" width="200px" height="200px">
         </div>
         <div class="Hero__Content">
             <p>I'm a Web Developer from Cebu, Philippines.</p>
