--- a/source/_includes/layouts/me-header.njk
+++ b/source/_includes/layouts/me-header.njk
@@ -4,7 +4,7 @@ layout: layouts/main.njk
 
 <section class="Section MeHeader">
     <a class="ProfileWidget" href="/">
-        <img class="ProfileWidget__Image" src="/static/images/avatar.jpg" alt="Arnelle Balane">
+        <img class="ProfileWidget__Image" src="/static/images/avatar-40.jpg" alt="Arnelle Balane" width="40px" height="40px">
         <h1 class="fs-24 fw-900">Arnelle Balane</h1>
     </a>
 </section>
