--- a/source/blog.njk
+++ b/source/blog.njk
@@ -1,5 +1,9 @@
 ---
 layout: layouts/me-header.njk
+title: Blog | Arnelle Balane
+description:
+    I experiement a lot with cool new Web technologies and techniques, and I
+    write about my experiences with them. Here are what I've written so far.
 pagination:
     data: articles
     size: 7
