--- a/source/events.njk
+++ b/source/events.njk
@@ -1,5 +1,11 @@
 ---
 layout: layouts/me-header.njk
+title: Events | Arnelle Balane
+description:
+    I talk or do workshops about Web technologies, usually about Web Platform
+    APIs, Progressive Web Apps, Firebase, amd Web Platform APIs. Here are some
+    that I did before and the ones that are upcoming. You can also invite me to
+    speak or do a workshop at your event!
 stylesheets:
     - /static/stylesheets/pages/events.css
     - /static/stylesheets/components/items.css
