--- a/source/projects.njk
+++ b/source/projects.njk
@@ -1,5 +1,6 @@
 ---
 layout: layouts/me-header.njk
+title: Projects | Arnelle Balane
 stylesheets:
     - /static/stylesheets/pages/projects.css
     - /static/stylesheets/components/items.css
