Update meta description

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -1,7 +1,7 @@
 ---
 title: Arnelle Balane
 description:
-    Web Developer from Cebu, Philippines. Software Engineer at Newlogic.
+    Web Developer from Cebu, Philippines. Software Developer at Newlogic.
     Google Developer Expert in Web Technologies. I love building things on the
     Web and sharing about it.
 ---
