--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -15,6 +15,9 @@ description:
         <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="/static/stylesheets/themes/dark.css">
         <link rel="stylesheet" media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)" href="/static/stylesheets/themes/light.css">
 
+        <link rel="preload" as="font" href="/static/fonts/Gilroy/Gilroy-Regular-subset.woff2">
+        <link rel="preload" as="font" href="/static/fonts/Gilroy/Gilroy-Heavy-subset.woff2">
+
         <link rel="stylesheet" href="/static/stylesheets/main.css">
         {% for stylesheet in stylesheets %}
         <link rel="stylesheet" href="{{ stylesheet }}">
