Add trailing slashes to URLs

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -37,9 +37,9 @@ description:
 
     <body>
         <nav class="Navigation">
-            <a class="Navigation__Link fs-18" href="/blog">Blog</a>
-            <a class="Navigation__Link fs-18" href="/events">Events</a>
-            <a class="Navigation__Link fs-18" href="/projects">Projects</a>
+            <a class="Navigation__Link fs-18" href="/blog/">Blog</a>
+            <a class="Navigation__Link fs-18" href="/events/">Events</a>
+            <a class="Navigation__Link fs-18" href="/projects/">Projects</a>
 
             <span class="DarkModeToggle">
                 <dark-mode-toggle permanent></dark-mode-toggle>
