--- a/source/index.njk
+++ b/source/index.njk
@@ -65,7 +65,7 @@ stylesheets:
         {% endfor %}
     </ol>
 
-    <p>The <a href="/events">events page</a> contains a list of my previous talks and workshops.</p>
+    <p>The <a href="/events/">events page</a> contains a list of my previous talks and workshops.</p>
 </section>
 
 <section class="Section">
