--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -29,7 +29,7 @@ description:
         <meta property="og:url" content="https://arnellebalane.com{{ page.url }}">
         <meta name="description" content="{{ description }}">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="google-site-verification" content="W8qQ8JyTkzOMts_n-lX11JdN_A6XZn3U_535iL-ZhFk" />
+        <meta name="google-site-verification" content="W8qQ8JyTkzOMts_n-lX11JdN_A6XZn3U_535iL-ZhFk">
 
         <link rel="icon" href="/static/images/favicon.png">
         <title>{{ title }}</title>
