Add custom permalink for 404 page

--- a/source/404.njk
+++ b/source/404.njk
@@ -1,5 +1,6 @@
 ---
 layout: layouts/me-header.njk
+permalink: 404.html
 title: Oops! That page doesn't exist!
 description:
     Web Developer from Cebu, Philippines. Software Developer at Newlogic.
