Use only one layout, toggle sections using frontmatter

--- a/source/404.njk
+++ b/source/404.njk
@@ -1,5 +1,6 @@
 ---
-layout: layouts/me-header.njk
+layout: layouts/main.njk
+showNavigation: false
 permalink: 404.html
 title: Oops! That page doesn't exist!
 description:
