--- a/source/blog.njk
+++ b/source/blog.njk
@@ -1,5 +1,5 @@
 ---
-layout: layouts/me-header.njk
+layout: layouts/main.njk
 title: Blog | Arnelle Balane
 description:
     I experiement a lot with cool new Web technologies and techniques, and I
