--- a/source/events.njk
+++ b/source/events.njk
@@ -1,5 +1,5 @@
 ---
-layout: layouts/me-header.njk
+layout: layouts/main.njk
 title: Events | Arnelle Balane
 description:
     I talk or do workshops about Web technologies, usually about Web Platform
