--- a/source/projects.njk
+++ b/source/projects.njk
@@ -1,5 +1,5 @@
 ---
-layout: layouts/me-header.njk
+layout: layouts/main.njk
 title: Projects | Arnelle Balane
 stylesheets:
     - /static/stylesheets/pages/projects.css
