--- a/source/index.njk
+++ b/source/index.njk
@@ -1,5 +1,6 @@
 ---
 layout: layouts/main.njk
+showProfileHeader: false
 stylesheets:
     - /static/stylesheets/pages/index.css
     - /static/stylesheets/components/items.css
