Make footer stick to bottom of page

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -64,8 +64,10 @@ showProfileHeader: true
         </div>
 
         <footer class="Footer">
-            <div class="Wrapper Footer__Content">
-                <small>&copy; Copyright 2019 Arnelle Balane</small>
+            <div class="Wrapper">
+                <div class="Footer__Content">
+                    <small>&copy; Copyright 2019 Arnelle Balane</small>
+                </div>
             </div>
         </footer>
 
