Update ProfileWidget styles in 404 page

--- a/source/static/stylesheets/pages/404.css
+++ b/source/static/stylesheets/pages/404.css
@@ -1,3 +1,12 @@
+/* Profile Header Overrides */
+
+.Section.MeHeader {
+    margin-top: 8rem;
+    text-align: center;
+}
+
+
+
 /* 404 Page */
 
 .NotFound__Heading {
