Add hidden dark-mode-toggle in 404 page

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -48,6 +48,8 @@ showProfileHeader: true
                 <dark-mode-toggle permanent></dark-mode-toggle>
             </span>
         </nav>
+        {% else %}
+            <dark-mode-toggle class="hidden" permanent></dark-mode-toggle>
         {% endif %}
 
         <div class="Wrapper">
