List available offline pages in offline page

--- a/source/404.njk
+++ b/source/404.njk
@@ -8,18 +8,18 @@ description:
     Google Developer Expert in Web Technologies. I love building things on the
     Web and sharing about it.
 stylesheets:
-    - /static/stylesheets/pages/404.css
+    - /static/stylesheets/pages/standalone.css
 ---
 
-<section class="Section NotFound">
-    <h1 class="NotFound__Heading fs-30 fw-900">
-        <span class="NotFound__Oops">Oops!</span>
+<section class="Section Standalone">
+    <h1 class="Standalone__Heading fs-30 fw-900">
+        <span class="Standalone__Highlight">Oops!</span>
         That page doesn't exist!
     </h1>
 </section>
 
-<section class="Section NotFoundActions">
-    <p>Please go back to your previous page, or check out these other links:</p>
+<section class="Section StandaloneActions">
+    <p>Please go back to your previous page, or check out these other pages:</p>
 
     <ul>
         <li><a href="/">Home</a></li>
