Update icons and add apple-touch-icon

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -34,6 +34,7 @@ showProfileHeader: true
         <meta name="google-site-verification" content="W8qQ8JyTkzOMts_n-lX11JdN_A6XZn3U_535iL-ZhFk">
 
         <link rel="icon" href="/static/images/favicon.png">
+        <link rel="apple-touch-icon" href="/static/images/icons/apple-touch-icon.png">
         <link rel="manifest" href="/static/manifest.webmanifest">
         <title>{{ title }}</title>
     </head>
