Move production-only markup into nunjucks partials

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -39,10 +39,8 @@ showProfileHeader: true
         <title>{{ title }}</title>
 
         {% if config.env === 'production' %}
-        <script>
-            // First Input Delay polyfill from GoogleChromeLabs/first-input-delay
-            !function(n,e){var t,o,i,c=[],f={passive:!0,capture:!0},r=new Date,a="pointerup",u="pointercancel";function p(n,c){t||(t=c,o=n,i=new Date,w(e),s())}function s(){o>=0&&o<i-r&&(c.forEach(function(n){n(o,t)}),c=[])}function l(t){if(t.cancelable){var o=(t.timeStamp>1e12?new Date:performance.now())-t.timeStamp;"pointerdown"==t.type?function(t,o){function i(){p(t,o),r()}function c(){r()}function r(){e(a,i,f),e(u,c,f)}n(a,i,f),n(u,c,f)}(o,t):p(o,t)}}function w(n){["click","mousedown","keydown","touchstart","pointerdown"].forEach(function(e){n(e,l,f)})}w(n),self.perfMetrics=self.perfMetrics||{},self.perfMetrics.onFirstInputDelay=function(n){c.push(n),s()}}(addEventListener,removeEventListener);
-        </script>
+            {% include 'fid-polyfill.njk' %}
+            {% include 'firebase-performance-monitoring.njk' %}
         {% endif %}
     </head>
 
@@ -86,26 +84,7 @@ showProfileHeader: true
         <script nomodule src="/static/javascripts/main.js"></script>
 
         {% if config.env === 'production' %}
-        <script defer>
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('DOMContentLoaded', () => {
-                    navigator.serviceWorker.register('/sw.js');
-                });
-            }
-        </script>
-        <script>
-            // Firebase Performance Monitoring - Standalone SDK
-            const performanceStandalone = 'https://www.gstatic.com/firebasejs/6.4.0/firebase-performance-standalone.js';
-            const firebaseConfig = {
-                apiKey: 'AIzaSyBJZqn-KWmYvl9rvA_nn3tIp6BkIXYB0WE',
-                projectId: 'arnellebalane-com',
-                appId: '1:913849576353:web:7e83e1346afebd10'
-            };
-            (function(sa,fbc){function load(f,c){var a=document.createElement('script');
-            a.async=1;a.src=f;var s=document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(a,s);}load(sa);window.onload = function() {firebase.initializeApp(fbc).performance();};
-            })(performanceStandalone, firebaseConfig);
-        </script>
+            {% include 'service-worker.njk' %}
         {% endif %}
     </body>
 </html>
