Remove defer attribute from inline scripts

--- a/source/_includes/service-worker.njk
+++ b/source/_includes/service-worker.njk
@@ -1,4 +1,4 @@
-<script defer>
+<script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('DOMContentLoaded', () => {
             navigator.serviceWorker.register('/sw.js');
