--- a/source/blog.njk
+++ b/source/blog.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.njk
-title: Blog | Arnelle Balane
+title: Blog
 description:
     I experiement a lot with cool new Web technologies and techniques, and I
     write about my experiences with them. Here are what I've written so far.
