--- a/source/events.njk
+++ b/source/events.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.njk
-title: Events | Arnelle Balane
+title: Events
 description:
     I talk or do workshops about Web technologies, usually about Web Platform
     APIs, Progressive Web Apps, Firebase, amd Web Platform APIs. Here are some
