--- a/source/projects.njk
+++ b/source/projects.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.njk
-title: Projects | Arnelle Balane
+title: Projects
 stylesheets:
     - /static/stylesheets/pages/projects.css
     - /static/stylesheets/components/items.css
