Add build:metatags gulp task to use absolute urls in metatags

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -27,8 +27,8 @@ showProfileHeader: true
 
         <meta property="og:title" content="{{ title }}">
         <meta property="og:description" content="{{ description }}">
-        <meta property="og:image" content="https://arnellebalane.com/static/images/social-share.jpg">
-        <meta property="og:url" content="https://arnellebalane.com{{ page.url }}">
+        <meta property="og:image" content="/static/images/social-share.jpg">
+        <meta property="og:url" content="{{ page.url }}">
         <meta name="description" content="{{ description }}">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="google-site-verification" content="W8qQ8JyTkzOMts_n-lX11JdN_A6XZn3U_535iL-ZhFk">
