Add twitter:text:title metatag

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -31,6 +31,7 @@ showProfileHeader: true
         <meta property="og:url" content="{{ page.url }}">
         <meta name="description" content="{{ description }}">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:text:title" content="{{ title | formatPageTitle }}">
         <meta name="google-site-verification" content="W8qQ8JyTkzOMts_n-lX11JdN_A6XZn3U_535iL-ZhFk">
 
         <link rel="icon" href="/static/images/favicon.png">
