Add styles for article pages

--- a/source/_includes/layouts/article.njk
+++ b/source/_includes/layouts/article.njk
@@ -18,5 +18,7 @@ showProfileHeader: false
         </ul>
     </header>
 
-    {{ content | safe }}
+    <main>
+        {{ content | safe }}
+    </main>
 </article>
