--- a/source/static/stylesheets/themes/dark.css
+++ b/source/static/stylesheets/themes/dark.css
@@ -4,6 +4,7 @@
     --primary-accent-color: #d45d79;
     --primary-background-color: #141A24;
     --gray: #5c636e;
+    --code-inline-background-color: #242A33;
 }
 
 img,
