--- a/source/static/stylesheets/themes/light.css
+++ b/source/static/stylesheets/themes/light.css
@@ -4,4 +4,5 @@
     --primary-accent-color: #c13355;
     --primary-background-color: #fff;
     --gray: #e7eaef;
+    --code-inline-background-color: #f9fafb;
 }
