--- a/source/static/stylesheets/components/article.css
+++ b/source/static/stylesheets/components/article.css
@@ -30,3 +30,82 @@
 .Article header li {
     margin-right: 1.6rem;
 }
+
+
+
+/* Styles for actual article contents. */
+
+.Article h2,
+.Article h3 {
+    margin-top: 6rem;
+    margin-bottom: 3rem;
+    font-weight: 900;
+}
+
+.Article h2 {
+    font-size: 3rem;
+}
+
+.Article h3 {
+    font-size: 2.4rem;
+}
+
+.Article img {
+    display: block;
+    max-width: 100%;
+    margin-bottom: 4rem;
+}
+
+.Article a code {
+    text-decoration: underline;
+}
+
+.Article code {
+    padding: 2px 8px;
+    border-radius: 4px;
+    font-size: 2.4rem;
+    background-color: var(--code-inline-background-color);
+}
+
+.Article pre {
+    overflow: auto;
+    padding: 2.4rem;
+    border-radius: 4px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: var(--code-inline-background-color);
+}
+
+.Article pre code {
+    padding: 0;
+    font-size: 1.8rem;
+    background: none;
+}
+
+.Article hr {
+    width: 100%;
+    max-width: 30rem;
+    height: 2px;
+    border: none;
+    margin: 6rem auto;
+    background-color: var(--gray);
+}
+
+.Article blockquote {
+    padding: 0 2.4rem;
+    border-left: 4px solid var(--primary-accent-color);
+    border-radius: 4px;
+    margin: 2rem 0;
+
+    font-style: italic;
+    background-color: var(--code-inline-background-color);
+    overflow: hidden;
+}
+
+.Article main ul {
+    margin-bottom: 4rem;
+}
+
+.Article main li {
+    margin: 1rem 0;
+}
