Add 11ty syntax highlight plugin with Dracula theme

--- a/source/_includes/layouts/article.njk
+++ b/source/_includes/layouts/article.njk
@@ -2,6 +2,7 @@
 layout: layouts/main.njk
 stylesheets:
     - /static/stylesheets/components/article.css
+    - /static/stylesheets/components/code-snippets.css
 showHomeNavigation: true
 showProfileHeader: false
 ---
