--- a/source/index.njk
+++ b/source/index.njk
@@ -11,7 +11,10 @@ stylesheets:
 
     <div class="clearfix">
         <div class="Hero__Image">
-            <img src="/static/images/avatar-200.jpg" alt="Arnelle Balane" width="200px" height="200px">
+            <picture>
+                <source srcset="/static/images/avatar-200.webp" type="image/webp">
+                <img src="/static/images/avatar-200.jpg" alt="Arnelle Balane" width="200px" height="200px">
+            </picture>
         </div>
         <div class="Hero__Content">
             <p>I'm a Web Developer from Cebu, Philippines.</p>
